workload/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-external
  namespace: immich
spec:
  ingressClassName: traefik
  rules:
    - host: immich.haziqhakimi.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-internal
  namespace: immich
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
